# prog6-BILTS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini  setupbuild.bat  setupbuild.sh
ECG/: EGCV4.pro  ecgsimulator.cpp  ecgsimulator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
arduino-files/main/: ECG.cpp  ECG.h  MCP3426.cpp  MCP3426.h  main.ino
instructor-program/BILTS_instuctor/: BILTS_instuctor.pro  Mqtt_client.cpp  Mqtt_client.h  instuctorwindow.cpp  instuctorwindow.h  instuctorwindow.ui  main.cpp
instructor-program/build-BILTS_instuctor-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: allocator.h.93BF9A1F82F6688C.idx  hashtable.h.2122BA1A87DDCE40.idx  instuctorwindow.cpp.690AF988AE70C24A.idx  instuctorwindow.h.1F43170D6D879566.idx  main.cpp.1700992CED439EA4.idx  process.h.548655B1B24C8632.idx  qaction.h.925A48F0FA7EE335.idx  qbytearray.h.4C705B1F52ED2E2F.idx  qbytearraylist.h.190B302A3D8054FC.idx  qchar.h.691E33A8192AA42E.idx  qcontainerfwd.h.A0DA045BFC493DEC.idx  qcursor.h.E5BB13ABECC42FA0.idx  qdatastream.h.77BCDC96A5BAA0C3.idx  qdebug.h.049FA7E1EB4F8F95.idx  qflags.h.E495A61DA4E8FB65.idx  qicon.h.687C7AA358C52ACE.idx  qiterator.h.64BE9249C67A9FD5.idx  qlist.h.AFC2A7DA5B68406B.idx  qmainwindow.h.D3342055106EDE2E.idx  qmap.h.3214257B034C25C4.idx  qmath.h.D5467A1BCE2F3668.idx  qobject.h.4DFE3DF23251D534.idx  qobjectdefs.h.52552309B4975986.idx  qobjectdefs.h.611DE818407147A9.idx  qobjectdefs_impl.h.02EA8F2E80C50737.idx  qpolygon.h.3F53C1FE97F464D6.idx  qshareddata.h.6B5528025035661A.idx  qsharedpointer_impl.h.B279255E67BEEC6B.idx  qstringconverter_base.h.B9ADE7B4B048943B.idx  qstringlist.h.3A42AE31252A15D5.idx  qswap.h.85A8ACAF9CE71BAE.idx  qtaggedpointer.h.D38BFE83435CF857.idx  qtclasshelpermacros.h.B81C09FF2CB4B665.idx  qtmetamacros.h.DD339A35763BB122.idx  qtwidgets-config.h.2BFD08CC30C01E08.idx  qtwidgetsglobal.h.2402D9C4BF0D62AF.idx  qwidget.h.1E6FA7858EF88955.idx  shared_ptr.h.68992A1576396FB9.idx  stdio.h.38586BCA99051192.idx  stl_function.h.7AA784877DC3C96E.idx  (+7 more)
src/: BGTask.cpp  BGTask.h  MQTT.cpp  MQTT.h  MonitorWidget.cpp  MonitorWidget.h  NIBP.cpp  NIBP.h  RenderingEngine.cpp  RenderingEngine.h  Resipartion.cpp  Resipartion.h  main.cpp  serial.cpp  serial.h  sp02.cpp  sp02.h
